--- a/README
+++ b/README
@@ -1,2 +1,2 @@
   This is a Social Media Website called Random Meet
-  http://randommeet.herokuapp.com/
+  [Link to the Live Site](http://randommeet.herokuapp.com/)
