Removed excess code

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-  This is a Social Media Website called Random Meet
-  http://randommeet.herokuapp.com
+  This is a Social Media Website called High Speed Chess
+  http://www.highspeedchess.com
